Forgot xhomer.cfg

--- a/xhomer.cfg
+++ b/xhomer.cfg
@@ -348,12 +348,29 @@ lp_workaround = off
 
 # ********************************************************************
 # Exit-on-HALT for 2.9 BSD
-#
-# Turning the following option on will cause the emulator to exit
-# when a HALT instruction is executed in the emulation.  This allows
-# a clean shutdown of 2.9 BSD via a "reboot -h" command, returning
-# control back to the Linux command line.  Turning this option on
-# should generally be harmless for other scenarios.
-# ********************************************************************
+
+#Turning the following option on will cause the emulator to exit
+#when a HALT instruction is executed in the emulation.  This allows
+#a clean shutdown of 2.9 BSD via a "reboot -h" command, returning
+#control back to the Linux command line.  Turning this option on
+#should generally be harmless for other scenarios.
+#********************************************************************
 
 exit_on_halt = on
+
+# ********************************************************************
+# SDL2 Rendering Backend:
+#
+# This option controls which SDL2 rendering backend to use for
+# graphics output.  Valid values are:
+#
+# 1. opengl    - Use OpenGL hardware acceleration (default)
+# 2. software  - Use software rendering for compatibility
+#
+# OpenGL provides better performance but may not work on all systems.
+# Software rendering is more compatible but may be slower.
+# ********************************************************************
+
+sdl2_renderer = opengl
+
+#sdl2_renderer = software
